added 5 day cards

--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
           <span class="condition"></span> 
         </div>
       </div>
+      <section class="day-section">
+        <div class="day-card">
+          <img class="weather-icon" alt="weather icon">
+          <div class="day-card-date">day1</div>
+          <div>77&deg;</div>
+        </div>
+        <div class="day-card">
+          <img class="weather-icon" alt="weather icon">
+          <div class="day-card-date">day2</div>
+          <div>77&deg;</div>
+        </div>
+        <div class="day-card">
+          <img class="weather-icon" alt="weather icon">
+          <div class="day-card-date">day3</div>
+          <div>77&deg;</div>
+        </div>
+        <div class="day-card">
+          <img class="weather-icon" alt="weather icon">
+          <div class="day-card-date">day4</div>
+          <div>77&deg;</div>
+        </div>
+        <div class="day-card">
+          <img class="weather-icon" alt="weather icon">
+          <div class="day-card-date">day5</div>
+          <div>77&deg;</div>
+        </div>
+      </section>
     </div>
     <div class="panel">
       <form id="locationInput">
