added weather forecast cards

--- a/index.html
+++ b/index.html
@@ -34,29 +34,54 @@
       </div>
       <section class="day-section">
         <div class="day-card">
-          <img class="weather-icon" alt="weather icon">
-          <div class="day-card-date">day1</div>
-          <div>77&deg;</div>
+          <span class="day-card-date">Day1</span>
+          <img class="icon-small" alt="icon small">
+          <span>Temp</span>
+          <span class="temp-small"></span>
+          <span>Wind</span>
+          <span class="wind-small"></span>
+          <span>Humidity</span>
+          <span class="humidity-small"></span>
         </div>
         <div class="day-card">
-          <img class="weather-icon" alt="weather icon">
-          <div class="day-card-date">day2</div>
-          <div>77&deg;</div>
+          <span class="day-card-date">Day2</span>
+          <img class="icon-small" alt="icon small">
+          <span>Temp</span>
+          <span class="temp-small">90</span>
+          <span>Wind</span>
+          <span class="wind-small"></span>
+          <span>Humidity</span>
+          <span class="humidity-small"></span>
         </div>
         <div class="day-card">
-          <img class="weather-icon" alt="weather icon">
-          <div class="day-card-date">day3</div>
-          <div>77&deg;</div>
+          <span class="day-card-date">Day3</span>
+          <img class="icon-small" alt="icon small">
+          <span>Temp</span>
+          <span class="temp-small"></span>
+          <span>Wind</span>
+          <span class="wind-small"></span>
+          <span>Humidity</span>
+          <span class="humidity-small"></span>
         </div>
         <div class="day-card">
-          <img class="weather-icon" alt="weather icon">
-          <div class="day-card-date">day4</div>
-          <div>77&deg;</div>
+          <span class="day-card-date">Day4</span>
+          <img class="icon-small" alt="icon small">
+          <span>Temp</span>
+          <span class="temp-small"></span>
+          <span>Wind</span>
+          <span class="wind-small"></span>
+          <span>Humidity</span>
+          <span class="humidity-small"></span>
         </div>
         <div class="day-card">
-          <img class="weather-icon" alt="weather icon">
-          <div class="day-card-date">day5</div>
-          <div>77&deg;</div>
+          <span class="day-card-date">Day5</span>
+          <img class="icon-small" alt="icon small">
+          <span>Temp</span>
+          <span class="temp-small"></span>
+          <span>Wind</span>
+          <span class="wind-small"></span>
+          <span>Humidity</span>
+          <span class="humidity-small"></span>
         </div>
       </section>
     </div>
