Added missing div closing tag

--- a/index.html
+++ b/index.html
@@ -27,37 +27,41 @@
               <span class="date"></span>
             </small>
           </div>
-        <div class="weather">
-          <img alt="icon" class="icon" />
-          <span class="condition"></span> 
+          <div class="weather">
+            <img alt="icon" class="icon" />
+            <span class="condition"></span>
+          </div>
         </div>
+        <section class="day-section"></section>
       </div>
-      <section class="day-section">
-      </section>
-    </div>
-    <div class="panel">
-      <form id="locationInput">
-        <input type="text" class="searchInput" placeholder="Search for a city" />
-        <button type="submit" class="submit">
-          <i class="fas fa-search"></i>
-        </button>
-      </form>
-      <ul class="cities"></ul>
-      <ul class="details">
-        <h4>Weather Details</h4>
-        <li>
-          <span>Wind</span>
-          <span class="wind"></span>
-        </li>
-        <li>
-          <span>Humidity</span>
-          <span class="humidity"></span>
-        </li>
-        <li>
-          <span>UV index</span>
-          <span class="uv"></span>
-        </li>
-      </ul>
+      <div class="panel">
+        <form id="locationInput">
+          <input
+            type="text"
+            class="searchInput"
+            placeholder="Search for a city"
+          />
+          <button type="submit" class="submit">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+        <ul class="cities"></ul>
+        <ul class="details">
+          <h4>Weather Details</h4>
+          <li>
+            <span>Wind</span>
+            <span class="wind"></span>
+          </li>
+          <li>
+            <span>Humidity</span>
+            <span class="humidity"></span>
+          </li>
+          <li>
+            <span>UV index</span>
+            <span class="uv"></span>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
